Routes and controller logic, response method and Validation of records
