# routes/client.route.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const router = express.Router();
-const validator = require('../middlewares/helpers/validators/validator.service')
 const ClientController = require('../controllers/client.controller');
+const validator = require('../middlewares/helpers/validators/validator.service')
 
 
 router.get('/', ClientController.getClient);
@@ -10,7 +10,7 @@ router.post('/create', validator("validators", "clientRecord"), ClientController
 
 router.get('/:id', ClientController.getClientById);
 
-router.patch('/:id', ClientController.updateClient);
+router.patch('/:id',validator("validators", "clientRecord"), ClientController.updateClient);
 
 router.delete('/:id', ClientController.deleteClient);
 
